--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,28 @@
 [tool.poetry]
 name = "stocksim"
-version = "0.1.0"
-description = ""
+version = "1.0.0"
+description = "A stock market simulator written in Python & tkinter"
 authors = ["RyloRiz <91710711+RyloRiz@users.noreply.github.com>"]
+maintainers = ["RyloRiz <91710711+RyloRiz@users.noreply.github.com>"]
+repository = "https://github.com/RyloRiz/stocksim"
 readme = "README.md"
+license = "GPL-3.0-or-later"
+keywords = ["python", "stock", "market", "simulator", "tkinter"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Environment :: MacOS X",
+    "Intended Audience :: End Users/Desktop",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+    "Natural Language :: English",
+    "Operating System :: MacOS",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Topic :: Games/Entertainment :: Simulation",
+    "Topic :: Games/Entertainment :: Turn Based Strategy",
+
+
+]
 
 [tool.poetry.dependencies]
 python = "^3.12"
