--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
 .DS_Store
+**/.idea/workspace.xml **/.idea/tasks.xml
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
